# slump

./: index.html
slump/: LICENSE  package.json  tailwind.config.cjs  tsconfig.json  webpack.config.js
slump/native/: Cargo.toml
slump/native/src/: error.rs  lib.rs
slump/native/src/audio/: mod.rs
slump/native/src/video/: mod.rs
slump/native/src/webrtc/: mod.rs
slump/scripts/: copy-native.js
slump/src/main/: main.ts  preload.ts  types.ts
slump/src/renderer/: index.html  index.tsx  styles.css
slump/src/renderer/screens/: Connect.tsx  Dashboard.tsx  Login.tsx  Settings.tsx
