[package]
name = "slump_native"
version = "0.2.0"
authors = ["Slump Team"]
edition = "2021"
description = "High-performance VR streaming core for Slump"
repository = "https://github.com/yourusername/slump"
license = "MIT"
keywords = ["vr", "streaming", "webrtc", "nvenc", "video"]

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
bitflags = "2.0"
bytes = "1.0"
ffmpeg-next = { version = "6.0", features = ["ffmpeg6", "codec", "format", "filter", "software_scaling"] }
log = "0.4"
napi = { version = "2", features = ["napi4", "serde-json"] }
napi-derive = "2"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
webrtc-rs = { git = "https://github.com/webrtc-rs/webrtc", features = ["default"] }
windows = { version = "0.48.0", features = ["Win32_Graphics_Dxgi", "Win32_Graphics_Direct3D11", "Win32_System_Com"] }

[build-dependencies]
cc = "1.0"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
panic = "abort"
incremental = false

[features]
default = ["nvenc", "cuda"]
nvenc = ["ffmpeg-next/nvenc"]
cuda = ["ffmpeg-next/cuda"]
qsv = ["ffmpeg-next/qsv"]
vaapi = ["ffmpeg-next/vaapi"]
videotoolbox = ["ffmpeg-next/videotoolbox"]
